Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62311

Widget browser app hangs when exit with an open combobox

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.2
    • 5.9.1, 5.10.0 Alpha
    • WebEngine
    • None
    • Linux x64

      Windows 7

      macOS 10.12
    • f559f0400ebd105ef048195e477248ff1f39f6e8

      Steps to reproduce:

      1. Start simplebrowser
      2. Navigate to http://kiev.tm/select.html
      3. Open combobox
      4. Close application

      I couldn't reproduce the issue with quick browser.

      Actual behavior:

      App doesn't exit but hangs. The following error message occurs on Windows:

      External WM_DESTROY received for QWidgetWindow(0x8e227e0, name="QtWebEngineCore::RenderWidgetHostViewQtDelegateWidgetClassWindow") , parent: QWindow(0x0) , transient parent: QWindow(0x0)
      No context current during QPlatformBackingStore destruction, OpenGL resources not released

      There is no error message on Linux.

      Expected behavior:

      App exits.

       

      I think this issue might be related or similar to https://bugreports.qt.io/browse/QTBUG-54836 

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            pvarga Peter Varga
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes